force-app/main/default/objects/Customer__c/fields/Accountrelatedcustomers__c.field-meta.xml
<CustomField>
    <fullName>Accountrelatedcustomers__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>