force-app/main/default/objects/Customer__c/fields/Additional_Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Installation_Cost__c</fullName>
    <label>Additional Installation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>