force-app/main/default/objects/Customer__c/fields/Alternate_Customer_1_SSN__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Customer_1_SSN__c</fullName>
    <label>Alternate Customer 1 SSN #</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>