force-app/main/default/objects/Customer__c/fields/Annual_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Annual_Escalation__c</fullName>
    <label>Annual Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>1.9%</fullName>
            </value>
            <value>
                <fullName>2%</fullName>
            </value>
            <value>
                <fullName>2.5%</fullName>
            </value>
            <value>
                <fullName>3.5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>