force-app/main/default/objects/Customer__c/fields/Closer_Commission__c.field-meta.xml
<CustomField>
    <fullName>Closer_Commission__c</fullName>
    <label>Closer Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>