force-app/main/default/objects/Customer__c/fields/Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commit_Amount__c</fullName>
    <label>Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>