force-app/main/default/objects/Customer__c/fields/Contract_Not_Signed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Not_Signed_Reason__c</fullName>
    <label>Contract Not Signed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer No-Show</fullName>
            </value>
            <value>
                <fullName>Customer Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>