force-app/main/default/objects/Customer__c/fields/Customer_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Monthly_Payment__c</fullName>
    <label>Customer Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>