force-app/main/default/objects/Customer__c/fields/Customer_SSN__c.field-meta.xml
<CustomField>
    <fullName>Customer_SSN__c</fullName>
    <label>Customer SSN #</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>sin</maskType>
    <type>EncryptedText</type>
</CustomField>