force-app/main/default/objects/Customer__c/fields/Description_of_additional_installation_c__c.field-meta.xml
<CustomField>
    <fullName>Description_of_additional_installation_c__c</fullName>
    <label>Description of additional installation c</label>
    <type>TextArea</type>
</CustomField>