force-app/main/default/objects/Customer__c/fields/Desinger_Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>Desinger_Approve_Date__c</fullName>
    <label>Desinger Approve Date</label>
    <type>DateTime</type>
</CustomField>