force-app/main/default/objects/Customer__c/fields/Driver_s_License_format__c.field-meta.xml
<CustomField>
    <fullName>Driver_s_License_format__c</fullName>
    <label>Driver’s License format</label>
    <length>20</length>
    <type>Text</type>
</CustomField>