force-app/main/default/objects/Customer__c/fields/Electrical_Modification_Cost__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Modification_Cost__c</fullName>
    <label>Electrical Modification Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>