force-app/main/default/objects/Customer__c/fields/I_D_Verification__c.field-meta.xml
<CustomField>
    <fullName>I_D_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I.D. Verification</label>
    <type>Checkbox</type>
</CustomField>