force-app/main/default/objects/Customer__c/fields/Inverter_Type__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Type__c</fullName>
    <label>Inverter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Micro&apos;</fullName>
            </value>
            <value>
                <fullName>AC PV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>