force-app/main/default/objects/Customer__c/fields/Lease_Contract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Contract</label>
    <type>Checkbox</type>
</CustomField>