force-app/main/default/objects/Customer__c/fields/Lease_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Lease_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Proposal</label>
    <type>Checkbox</type>
</CustomField>