force-app/main/default/objects/Customer__c/fields/Main_Panel_Photo__c.field-meta.xml
<CustomField>
    <fullName>Main_Panel_Photo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Panel Photo</label>
    <type>Checkbox</type>
</CustomField>