force-app/main/default/objects/Customer__c/fields/Micro_Inverter_Model__c.field-meta.xml
<CustomField>
    <fullName>Micro_Inverter_Model__c</fullName>
    <label>Micro Inverter Model</label>
    <type>TextArea</type>
</CustomField>