force-app/main/default/objects/Customer__c/fields/Milestone_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Total_Price__c</fullName>
    <label>Milestone Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>