force-app/main/default/objects/Customer__c/fields/Module_Wattage__c.field-meta.xml
<CustomField>
    <fullName>Module_Wattage__c</fullName>
    <label>Module Wattage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>