force-app/main/default/objects/Customer__c/fields/Other_Commission__c.field-meta.xml
<CustomField>
    <fullName>Other_Commission__c</fullName>
    <label>Other Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>