force-app/main/default/objects/Customer__c/fields/Roofing_Material__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Material__c</fullName>
    <label>Roofing Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>composite</fullName>
            </value>
            <value>
                <fullName>shingle</fullName>
            </value>
            <value>
                <fullName>s-tile</fullName>
            </value>
            <value>
                <fullName>spanish tile</fullName>
            </value>
            <value>
                <fullName>rolled comp</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>