force-app/main/default/objects/Customer__c/fields/Sales_Appointment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Appointment_Notes__c</fullName>
    <label>Sales Appointment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>