force-app/main/default/objects/Customer__c/fields/Sales_Manager_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Commission__c</fullName>
    <label>Sales Manager Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>