force-app/main/default/objects/Customer__c/fields/STE_Proposal__c.field-meta.xml
<CustomField>
    <fullName>STE_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STE Proposal</label>
    <type>Checkbox</type>
</CustomField>