force-app/main/default/objects/Customer__c/fields/SunPower_7_day_right__c.field-meta.xml
<CustomField>
    <fullName>SunPower_7_day_right__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SunPower 7-day right</label>
    <type>Checkbox</type>
</CustomField>