force-app/main/default/objects/Customer__c/fields/Telemarketer_Commission__c.field-meta.xml
<CustomField>
    <fullName>Telemarketer_Commission__c</fullName>
    <label>Telemarketer Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>