force-app/main/default/objects/Customer__c/fields/Title_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Title_Report_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Report Uploaded</label>
    <type>Checkbox</type>
</CustomField>