force-app/main/default/objects/Customer__c/fields/Utility_Bill_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_Obtained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Bill Obtained</label>
    <type>Checkbox</type>
</CustomField>